# openclaw-secure-installer

./: .env.mvp.example  .gitignore  CHATGPT_PRODUCT_VISION_CONTEXT.md  README_DESKTOP.md  RELEASE.md  SAFE_MODE.md  agent_test_out.txt  docker-compose.mvp.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-mvp.ps1  test_out.txt  tsdown.config.ts  vitest.config.ts  vitest.e2e.config.ts
.dev-compose-test/: docker-compose.yml
.gemini/: settings.json
desktop/: .gitignore  CHANGELOG.md  README.md  _build_output.txt  _frontend_build.txt  index.html  package.json  tauri_dev_out.txt  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  _build_output.txt  _check_output.txt  _test_output.txt  build.rs  build_log.txt  build_log_2.txt  check_error.txt  error.txt  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/migrations/: 20260311000000_init_core.sql  20260317000000_sprint_1_core.sql  20260317000001_sprint_1_completion.sql  20260317000002_sprint_2_bridge.sql
desktop/src-tauri/resources/: README.md
desktop/src-tauri/src/: agents.rs  channels.rs  chat.rs  db.rs  docker_check.rs  gateway.rs  llm.rs  main.rs  mission_commands.rs  mission_coordinator.rs  patch.rs  process.rs  runs.rs  runtime_pgsql.rs  secrets.rs  state_manager.rs  tests.rs
desktop/src-tauri/src/repositories/: artifacts_repository.rs  case_files_repository.rs  contracts_repository.rs  decision_records_repository.rs  mission_charters_repository.rs  mission_state_projections_repository.rs  missions_repository.rs  mod.rs  responsibility_ledger_repository.rs  resume_snapshots_repository.rs  run_linkages_repository.rs  validation_records_repository.rs
desktop/src-tauri/src/services/: contract_service.rs  mission_service.rs  mod.rs  projection_service.rs  records_service.rs  resume_service.rs
docs/: SECURE_INSTALLER_VERIFICATION.md  architecture_feasibility_audit.md  architecture_increments.md  current_architecture_map.md  current_functionality_vs_ui.md  debugging.md  decision_memo_v1.md  gap_analysis_initial.md  gap_analysis_vs_product_vision.md  implementation_backlog_mvp.md  mvp_vs_target_mapping.md  official_architecture_decisions.md  openclaw_adversarial_repo_audit_note.md  product_system_v2.md  (+27 more)
(+91 files in other folders)
