[package]
name = "openclaw_secure_installer"
version = "0.1.0"
description = "OpenClaw Secure Installer"
authors = ["OpenClaw"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2" # For state persistence
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }
# keyring = "3" # Option A requirement, but might be heavy. Keeping it commented for now unless standard plugin exists.

[features]
custom-protocol = ["tauri/custom-protocol"]
