[package]
name = "my_openclaw"
version = "0.1.8"
description = "My OpenClaw – Mission Control for OpenClaw agents"
authors = ["OpenClaw"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["windows-native"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt", "time", "macros", "fs", "process"] }
regex = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
